--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="relative">
-<nav class="text-blue-800 border-gray-200 h-[75px] bg-white dark:bg-secondary-100 dark:border-gray-700">
+<nav class="text-blue-800 border-gray-200 h-[75px] bg-white dark:bg-secondary-100/90 dark:border-gray-700">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a (click)="goTo('/dashboard')" class="flex items-center cursor-pointer">
-      <img src="assets/logos/idom-marketplace.svg" class="h-4 lg:h-8 mr-3 block dark:hidden" alt="IDOM Marketplace Logo" />
-      <img src="assets/logos/idom-marketplace-white.svg" class="h-4 lg:h-8 mr-3 hidden dark:block" alt="IDOM Marketplace Logo" />
+      <img src="assets/logos/ficodes_marketplace.svg" class="h-12 lg:h-12 mr-3 block dark:hidden" alt="FICODES Marketplace Logo" />
+      <img src="assets/logos/ficodes_marketplace-white.svg" class="h-12 lg:h-12 mr-3 hidden dark:block" alt="FICODES Marketplace Logo" />
       @if(showLogoText){
         <span class="self-center text-lg lg:text-2xl font-semibold whitespace-nowrap dark:text-white">{{ 'HEADER._marketplace' | translate }}</span>
       }
