--- a/src/app/offerings/platform-benefits/platform-benefits.component.html
+++ b/src/app/offerings/platform-benefits/platform-benefits.component.html
@@ -1,5 +1,5 @@
 <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16">
-    <h2 class="pb-2 text-4xl font-extrabold text-primary-100 mb-4 text-center dark:text-primary-50">{{ 'PLATFORM._title' | translate }}</h2>
+    <h2 class="pb-2 text-4xl font-extrabold text-blue-800 mb-4 text-center dark:text-primary-50">{{ 'PLATFORM._title' | translate }}</h2>
     <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-secondary-50 text-center">{{ 'PLATFORM._subtitle' | translate }}</p>
 
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -13,7 +13,7 @@
                     <fa-icon [icon]="faLockOpen" class="fa-2xl text-primary-100 dark:text-primary-50 align-middle"></fa-icon>
                 </div>
             </div>
-            
+
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.OPEN._desc' | translate }}</p>
 
             <!--<div class="flex h-1/4 align-bottom">
@@ -35,7 +35,7 @@
                     <fa-icon [icon]="faCircleNodes" class="fa-2xl text-primary-100 dark:text-primary-50 align-middle"></fa-icon>
                 </div>
             </div>
-            
+
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.INTEROPERABLE._desc' | translate }}</p>
             <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
@@ -55,7 +55,7 @@
                     <fa-icon [icon]="faShieldCheck" class="fa-2xl text-primary-100 dark:text-primary-50 align-middle"></fa-icon>
                 </div>
             </div>
-            
+
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.TRUSTWORTHY._desc' | translate }}</p>
             <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
@@ -75,7 +75,7 @@
                     <fa-icon [icon]="faHammer" class="fa-2xl text-primary-100 dark:text-primary-50 align-middle"></fa-icon>
                 </div>
             </div>
-            
+
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.COMPLIANT._desc' | translate }}</p>
             <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
@@ -95,7 +95,7 @@
                     <fa-icon [icon]="faLeaf" class="fa-2xl text-primary-100 dark:text-primary-50 align-middle"></fa-icon>
                 </div>
             </div>
-            
+
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.SUSTAINABLE._desc' | translate }}</p>
             <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
@@ -104,7 +104,7 @@
                     </svg>
                 </a>
             </div>-->
-        </div>  
+        </div>
         <!-- TRANSPARENT -->
         <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-8 md:p-12">
             <div class="grid grid-cols-80/20 pb-4 h-1/4">
@@ -115,7 +115,7 @@
                     <fa-icon [icon]="faMagnifyingGlass" class="fa-2xl text-primary-100 dark:text-primary-50 align-middle"></fa-icon>
                 </div>
             </div>
-            
+
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.TRANSPARENT._desc' | translate }}</p>
             <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
@@ -124,7 +124,6 @@
                     </svg>
                 </a>
             </div>-->
-        </div>  
+        </div>
     </div>
   </div>
-  
