ADD type to feedback messages

--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -85,5 +85,6 @@
   <feedback-modal 
   rateMessage="How relevant are the services to your context, needs and industry challenges?"
   writeMessage="Please elaborate on your answer"
+  type="services"
   class="fixed inset-0 flex items-center justify-center z-40"></feedback-modal>
 }
