--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -34,5 +34,6 @@
   <feedback-modal 
   rateMessage="How would you rate your overall experience with DOME?"
   writeMessage="How can we improve DOME?"
+  type="experience"
   class="fixed inset-0 flex items-center justify-center z-40"></feedback-modal>
 }
