FIX Ticket#831482 scroll to top after redirection

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -412,12 +412,14 @@
                                 class="text-lg font-normal text-gray-700 dark:text-gray-200 mb-4 break-all">
                                 </markdown>
                             </div>                            
-                              
-                            <button *ngIf="showReadMoreButton"
-                            class="mt-4 text-blue-500 focus:outline-none"
-                            (click)="toggleTermsReadMore()">
-                            {{ showTermsMore ? 'Read less' : 'Read more' }}
-                            </button>
+                            
+                            @if(showReadMoreButton){
+                                <button
+                                class="mt-4 text-blue-500 focus:outline-none"
+                                (click)="toggleTermsReadMore()">
+                                {{ showTermsMore ? 'Read less' : 'Read more' }}
+                                </button>
+                            }
                                                          
                         </div>
                     </div>
