ADD message when configuration profile is empty FIXES Ticket#831712

--- a/src/app/shared/forms/offer/price-plans/configuration-profile-drawer/configuration-profile-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/configuration-profile-drawer/configuration-profile-drawer.component.html
@@ -21,45 +21,52 @@
       </button>
     </div>
 
-    <div class="p-4 grid grid-cols-2 gap-4">
-      @for(char of characteristics.controls; track $index){
-        <div class="min-h-19 pb-2">
-          <h5 class="text-xl font-semibold tracking-tight text-primary-100">{{char.value.name}}:</h5>
-          @if(hasKey(char?.value.options[0], 'valueFrom')){
-            <div class="relative mb-6">
-              <label for="default-range" class="sr-only">Labels range</label>
-              <input id="default-range" type="range" (change)="changeProfileValue($index,$event)"
-                     [min]="char.value.options[0].valueFrom"
-                     [max]="char.value.options[0].valueTo"
-                     [value]="char.value.selectedValue"
-                     class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700 dark:text-gray-100">
-              <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-0 -bottom-6">Min ({{char?.value.options[0].valueFrom}})</span>
-              @if(char?.value.options?.length > 0){
-                <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-1/2 -bottom-6">{{char?.value.selectedValue}} {{char?.value.options[0].unitOfMeasure}}</span>
-              }
-              <span class="text-sm text-gray-500 dark:text-gray-400 absolute end-0 -bottom-6">Max ({{char?.value.options[0].valueTo}})</span>
-            </div>
-          }@else{
-            <!-- Dropdown Selector -->
-            <select *ngIf="!char.value.options?.[0]?.valueFrom"
-                    class="mb-2 bg-gray-50 dark:bg-secondary-300 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:text-gray-100"
-                    (change)="changeProfileValue($index, $event)">
-              <option *ngFor="let opt of char.value.options" [value]="opt.value" [selected]="opt.isDefault">
-                {{ opt.value }} <span *ngIf="opt.unitOfMeasure">({{ opt.unitOfMeasure }})</span>
-              </option>
-            </select>
-          }
-        </div>
-      }
-    </div>
-    <!-- Action Buttons -->
-    <div class="flex justify-end space-x-3 p-4">
-      <button type="button" (click)="closeDrawer()" class="px-4 py-2 bg-gray-300 dark:bg-gray-600 rounded dark:text-white">Cancel</button>
-      <button type="button" (click)="saveProfile()"
-              class="px-4 py-2 rounded text-white transition"
-              [ngClass]="{'bg-primary-100 hover:bg-primary-50': form.valid, 'bg-gray-400 cursor-not-allowed': form.invalid}">
-        Save
-      </button>
-    </div>
+    @if(characteristics.length>0){
+      <div class="p-4 grid grid-cols-2 gap-4">
+        @for(char of characteristics.controls; track $index){
+          <div class="min-h-19 pb-2">
+            <h5 class="text-xl font-semibold tracking-tight text-primary-100">{{char.value.name}}:</h5>
+            @if(hasKey(char?.value.options[0], 'valueFrom')){
+              <div class="relative mb-6">
+                <label for="default-range" class="sr-only">Labels range</label>
+                <input id="default-range" type="range" (change)="changeProfileValue($index,$event)"
+                       [min]="char.value.options[0].valueFrom"
+                       [max]="char.value.options[0].valueTo"
+                       [value]="char.value.selectedValue"
+                       class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700 dark:text-gray-100">
+                <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-0 -bottom-6">Min ({{char?.value.options[0].valueFrom}})</span>
+                @if(char?.value.options?.length > 0){
+                  <span class="text-sm text-gray-500 dark:text-gray-400 absolute start-1/2 -bottom-6">{{char?.value.selectedValue}} {{char?.value.options[0].unitOfMeasure}}</span>
+                }
+                <span class="text-sm text-gray-500 dark:text-gray-400 absolute end-0 -bottom-6">Max ({{char?.value.options[0].valueTo}})</span>
+              </div>
+            }@else{
+              <!-- Dropdown Selector -->
+              <select *ngIf="!char.value.options?.[0]?.valueFrom"
+                      class="mb-2 bg-gray-50 dark:bg-secondary-300 border text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:text-gray-100"
+                      (change)="changeProfileValue($index, $event)">
+                <option *ngFor="let opt of char.value.options" [value]="opt.value" [selected]="opt.isDefault">
+                  {{ opt.value }} <span *ngIf="opt.unitOfMeasure">({{ opt.unitOfMeasure }})</span>
+                </option>
+              </select>
+            }
+          </div>
+        }
+      </div>
+      <!-- Action Buttons -->
+      <div class="flex justify-end space-x-3 p-4">
+        <button type="button" (click)="closeDrawer()" class="px-4 py-2 bg-gray-300 dark:bg-gray-600 rounded dark:text-white">Cancel</button>
+        <button type="button" (click)="saveProfile()"
+                class="px-4 py-2 rounded text-white transition"
+                [ngClass]="{'bg-primary-100 hover:bg-primary-50': form.valid, 'bg-gray-400 cursor-not-allowed': form.invalid}">
+          Save
+        </button>
+      </div>
+    } @else {
+      <div class="p-4 my-2 text-sm text-center text-blue-800 rounded-lg bg-blue-50 dark:bg-secondary-100 dark:text-blue-400" role="alert">
+        <span class="font-medium">The selected product specification has no characteristics related.</span>
+      </div>
+    }
+
   </div>
 </div>
