FIX Ticket#83760 - Long description for catalogue

--- a/src/app/pages/catalogs/catalogs.component.html
+++ b/src/app/pages/catalogs/catalogs.component.html
@@ -98,7 +98,7 @@
 
           <!-- START HEADER CARD -->
           <div class="w-full rounded-t-lg p-4">
-              <h5 class="md:text-3xl lg:text-4xl font-semibold tracking-tight text-primary-100 dark:text-primary-50 text-wrap break-all">{{showingCat?.name}}</h5>
+              <h5 class="md:text-3xl lg:text-4xl font-semibold tracking-tight text-primary-100 dark:text-primary-50 text-wrap break-all line-clamp-4">{{showingCat?.name}}</h5>
           </div>
           <hr class="h-px my-1 bg-primary-100 border-0 dark:bg-primary-100">
         <!-- END HEADER CARD -->
