--- a/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
@@ -62,14 +62,46 @@
       
       
       @if(profileData){
-      <div class="flex">
-          <label class="font-bold text-lg dark:text-white">Does this price component apply to a product characteristic?</label>
-          <div class="flex inline-flex ml-2 align-middle">
-              <svg data-popover-target="popover-component-char" class="flex self-center w-6 h-6 text-primary-100" clip-rule="evenodd" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11h2v5m-2 0h4m-2.592-8.5h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
-              </svg>
+      <div class="relative w-full">
+        <div class="flex items-center space-x-2">
+          <!-- Label -->
+          <label class="font-bold text-lg dark:text-white">
+            {{ 'FORMS.PRICE_PLAN_COMPONENT._apply_to_char' | translate }}
+          </label>
+      
+          <!-- Info Icon + Popover -->
+          <div class="relative"
+              (mouseenter)="showPopover = true"
+              (mouseleave)="showPopover = false">
+            <svg
+              class="w-5 h-5 text-primary-100 cursor-pointer"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round">
+              <circle cx="12" cy="12" r="10"/>
+              <line x1="12" y1="16" x2="12" y2="12"/>
+              <line x1="12" y1="8" x2="12.01" y2="8"/>
+            </svg>
+      
+            <!-- Popover -->
+            @if(showPopover) {
+              <div
+                class="absolute bottom-full mb-2 left-1/2 -translate-x-1/2 z-50 w-64 p-3 text-sm bg-white border border-gray-300 rounded shadow-lg dark:bg-gray-800 dark:text-gray-100 dark:border-gray-600">
+                <div class="font-semibold mb-1 text-gray-900 dark:text-white">
+                  {{ 'FORMS.PRICE_PLAN_COMPONENT._product_char' | translate }}
+                </div>
+                <p>
+                  {{ 'FORMS.PRICE_PLAN_COMPONENT._prod_char_info' | translate }}
+                </p>
+              </div>
+            }
           </div>
-      </div>      
+        </div>
+      </div>
       <div class="flex flex-row">
         <select id="type" (change)="changePriceComponentChar($event)"
           class="mb-2 mr-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-gray-100 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
