Try fixing cypress failed test

--- a/src/app/pages/seller-offerings/offerings/seller-catalogs/create-catalog/create-catalog.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-catalogs/create-catalog/create-catalog.component.html
@@ -64,7 +64,7 @@
                         
                         
                         <label class="font-bold text-lg col-span-2 dark:text-white">{{ 'CREATE_CATALOG._description' | translate }}</label>
-                        <app-markdown-textarea formControlName="description"></app-markdown-textarea>
+                        <app-markdown-textarea data-cy=catalogDsc formControlName="description"></app-markdown-textarea>
 
                     </form>
                     <div class="flex w-full justify-items-end justify-end">
