--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/create-product-spec/create-product-spec.component.html
@@ -550,6 +550,7 @@
                                     <option selected value="string">String</option>
                                     <option value="number">Number</option>
                                     <option value="range">Number range</option>
+                                    <option value="boolean">Boolean</option>
                                 </select>
                             </div>
                             <div class="col-span-2">
@@ -599,7 +600,7 @@
                                     }
                                 </div>
                             }
-                            <label for="values" [ngClass]="rangeCharSelected && creatingChars.length==1 ? 'hidden' : ''" class="font-bold text-lg dark:text-white">{{ 'CREATE_PROD_SPEC._add_values' | translate }}</label>
+                            <label for="values" [ngClass]="rangeCharSelected && creatingChars.length==1 || booleanCharSelected && creatingChars.length==1 ? 'hidden' : ''" class="font-bold text-lg dark:text-white">{{ 'CREATE_PROD_SPEC._add_values' | translate }}</label>
                             @if(stringCharSelected){
                                 <div class="flex flex-row items-center align-items-middle">
                                     <input type="text" id="value" [(ngModel)]="stringValue"
@@ -661,6 +662,41 @@
                                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
                                         </svg>                                                                              
                                     </button> 
+                                </div>
+                            } @else if (booleanCharSelected && creatingChars.length==0){
+                                <div class="flex flex-col md:flex-row items-center align-items-middle">
+
+                                    <div class="flex items-center w-full mb-2 md:mb-0">
+                                        <label class="inline-flex items-center cursor-pointer">
+                                          <input 
+                                            type="checkbox" 
+                                            [(ngModel)]="booleanValue"
+                                            class="sr-only peer"
+                                          />
+                                          <div
+                                            class="relative w-11 h-6 bg-gray-200 peer-focus:outline-none 
+                                                   peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 
+                                                   rounded-full peer dark:bg-gray-700 
+                                                   peer-checked:after:translate-x-full 
+                                                   rtl:peer-checked:after:-translate-x-full 
+                                                   peer-checked:after:border-white 
+                                                   after:content-[''] after:absolute after:top-[2px] after:start-[2px] 
+                                                   after:bg-white after:border-gray-300 after:border 
+                                                   after:rounded-full after:h-5 after:w-5 after:transition-all 
+                                                   dark:border-gray-600 peer-checked:bg-blue-600 dark:peer-checked:bg-blue-600">
+                                          </div>
+                                          <span class="ms-3 text-sm font-medium text-gray-900 dark:text-gray-300">
+                                            Is this characteristic enabled?
+                                          </span>
+                                        </label>
+                                      </div>
+                                      
+
+                                    <button (click)="addCharValue()" type="button" class="cursor-pointer text-white w-fit h-full bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-1 text-center inline-flex items-center">
+                                        <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
+                                        </svg>                                                                              
+                                    </button>
                                 </div>
                             }
                             <div class="flex w-full justify-items-center justify-center mt-4">
